--- a/tinylink-backend/package.json
+++ b/tinylink-backend/package.json
@@ -5,7 +5,9 @@
   "main": "db.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "migrate": "node migrate.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +15,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "nanoid": "^5.1.6",
+    "nanoid": "^3.3.11",
     "pg": "^8.16.3",
     "valid-url": "^1.0.9"
   },
